# Ceprit

./: CMakeLists.txt  README.md
Culprit/: Camera.h  Hitable.h  HitableList.h  Material.h  Perlin.h  Ray.h  Sphere.h  Texture.h  Vec3.h  main.cpp
Culprit.xcodeproj/: project.pbxproj
Culprit.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Culprit.xcodeproj/xcuserdata/scott.xcuserdatad/xcschemes/: Culprit.xcscheme  xcschememanagement.plist
include/: AABB.h  BVHNode.h  Camera.h  Ray.h  Sphere.h
src/: BVHNode.h  Camera.h  Defines.h  HitableList.h  Sphere.h  Texture.h  Util.cpp  Util.h  Vec3.cpp  Vec3.h  main.cpp  stb_image.h  stb_image_implementation.cpp
src/Hitable/: AABox.cpp  AABox.h  AARects.cpp  AARects.h  Box.cpp  Box.h  ConstantMedium.cpp  ConstantMedium.h  FlipNormals.h  Hitable.h  HitableList.cpp  HitableList.h  RotateY.cpp  RotateY.h  Translation.h
src/Material/: ImageTexture.cpp  Isotropic.cpp  Isotropic.h  Material.h  Perlin.cpp  Perlin.h  Texture.h
